hphp/hack/test/typecheck/like_types/dynamic_coercion/decl_types/tvarray_or_darray.php.exp
File "tvarray_or_darray.php", line 13, characters 10-14:
Invalid return type (Typing[4110])
File "tvarray_or_darray.php", line 12, characters 24-44:
Expected varray_or_darray<arraykey, int>
File "tvarray_or_darray.php", line 4, characters 17-23:
But got dynamic
